--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,18 +38,21 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
-    implementation"com.google.firebase:firebase-auth:22.1.0"
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.8.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.3'
+    implementation"com.google.firebase:firebase-auth:22.1.2"
     implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1'
+    implementation("com.google.android.play:app-update:2.1.0")
+    implementation("com.google.android.play:app-update-ktx:2.1.0")
 }
