--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,17 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icone"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icone"
         android:supportsRtl="true"
         android:theme="@style/Theme.Protect"
         tools:targetApi="31">
+        <activity
+            android:name=".AbonnementActivity"
+            android:exported="false"
+            android:label="@string/title_activity_abonnement"
+            android:theme="@style/Theme.Protect" />
         <activity
             android:name=".SuperviseurDetailPointActivity"
             android:exported="false"
