--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -22,18 +25,24 @@
         android:theme="@style/Theme.Protect"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
-            android:screenOrientation="portrait"
+            android:name=".SuperviseurDetailPointNational"
             android:exported="false" />
         <activity
-            android:name=".UpdatePasswordActivity"
-            android:screenOrientation="portrait"
+            android:name=".SuperviseurDetailPointInterActivity"
             android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UpdatePasswordActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".AbonnementActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_abonnement"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Protect" />
         <activity
             android:name=".SuperviseurDetailPointActivity"
@@ -47,24 +56,22 @@
             android:theme="@style/Theme.Protect" />
         <activity
             android:name=".SuperviseurActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
-
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LoaderLoginActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
