--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,13 +27,19 @@
         android:theme="@style/Theme.Protect"
         tools:targetApi="31">
         <activity
+            android:name=".DoubleAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AssistantTransactionSuperviseurActivity"
+            android:exported="false" />
+        <activity
             android:name=".SuperviseurDetailPointNational"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SuperviseurDetailPointInterActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
