--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         android:theme="@style/Theme.Protect"
         tools:targetApi="31">
         <activity
+            android:name=".TikeramaActivity"
+            android:exported="false" />
+        <activity
             android:name=".DoubleAccountActivity"
             android:exported="false" />
         <activity
