--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,18 @@
         android:theme="@style/Theme.Protect"
         tools:targetApi="31">
         <activity
+            android:name=".OrangeSaveActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrangeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OrangeSmsListActivity"
+            android:exported="false" />
+        <activity
             android:name=".OrangeMissingSmsConfirmActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".TikeramaActivity"
             android:exported="false" />
